<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uitl.AddCardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="91dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/rita_pay_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="21dp"
            android:text="@string/add_card_to_favorite"
            android:textColor="#23BDBD"
            android:textStyle="bold" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutFirst"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <EditText
                    android:id="@+id/editText_pan_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/pan_number"
                    android:inputType="number"
                    android:maxLength="19"
                    android:maxLines="1"
                    android:padding="@dimen/edittext_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/editText_expire_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/expire_date"
                    android:inputType="none"
                    android:padding="@dimen/edittext_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_pan_number" />


                <EditText
                    android:id="@+id/editText_pan_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/pan_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/edittext_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_expire_date" />


                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_background"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_pan_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</LinearLayout>