<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_background_done"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_dialog_title_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:gravity="center"
            android:padding="11dp"
            android:text="@string/qr_purchase"
            android:textColor="#4CAF50"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_background_done"
                    android:padding="9dp"
                    android:text="@string/responsestatus"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_response_msg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="9dp"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_background_done"
                    android:padding="9dp"
                    android:text="@string/pan_number"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_response_pan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="9dp"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_background_done"
                    android:padding="9dp"
                    android:text="@string/amount"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_response_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="9dp"
                    android:textAlignment="center"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_background_done"
                    android:padding="9dp"
                    android:text="Fees"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_response_fee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="9dp"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/dialog_button_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/button_background_done"
            android:padding="11dp"
            android:text="@string/success"
            android:textAllCaps="false"
            android:textColor="#fff" />

    </LinearLayout>


</RelativeLayout>