<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PurchaseActivity">

    <LinearLayout
        android:id="@+id/qr_failed_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="7">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            app:srcCompat="@drawable/ic_baseline_error_outline_24" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="فشل قراءة ال  qr"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="17sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_re_read_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="إعادة مسح"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:id="@+id/payment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="91dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/rita_pay_logo" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:orientation="vertical"
                    android:visibility="visible">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="@drawable/textview_background"
                            android:padding="7dp"
                            android:text="@string/merchant_name"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/merchant_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="@drawable/textview_background"
                            android:padding="7dp"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="@drawable/textview_background"
                            android:padding="7dp"
                            android:text="@string/merchant_city"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/merchant_city"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="@drawable/textview_background"
                            android:padding="7dp"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayoutFirst"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RelativeLayout
                        android:id="@+id/relativeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <EditText
                            android:id="@+id/editText_pan_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/edittext_background"
                            android:hint="@string/pan_number"
                            android:inputType="number"
                            android:maxLength="19"
                            android:maxLines="1"
                            android:padding="@dimen/edittext_padding"

                            />

                        <ImageView
                            android:id="@+id/imageView_cards"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/editText_pan_number"
                            android:layout_alignEnd="@+id/editText_pan_number"
                            android:layout_alignBottom="@+id/editText_pan_number"
                            android:padding="7dp"
                            app:srcCompat="@drawable/ic_baseline_credit_card_24" />

                    </RelativeLayout>


                    <EditText
                        android:id="@+id/editText_expire_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edittext_background"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/expire_date"
                        android:inputType="none"
                        android:padding="@dimen/edittext_padding"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />


                    <EditText
                        android:id="@+id/editText_ipin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edittext_background"
                        android:hint="@string/ipin"
                        android:inputType="numberPassword"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:padding="@dimen/edittext_padding"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editText_expire_date" />

                    <EditText
                        android:id="@+id/editText_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edittext_background"
                        android:hint="@string/amount"
                        android:inputType="number"
                        android:maxLines="1"
                        android:padding="@dimen/edittext_padding"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editText_ipin" />


                    <Button
                        android:id="@+id/buttonSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/button_background"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editText_amount" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>